# VividVision

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  README.md
assets/fbx/: Taunt.fbx
cmake/: CPM.cmake
engine/: CMakeLists.txt
engine/app/: DemoApp.cpp  DemoApp.hpp  DemoMain.cpp
engine/asset/import/: AssimpFbxImporter.cpp  AssimpFbxImporter.hpp
engine/asset/mesh/: SkinWeight.cpp  SkinWeight.hpp
engine/asset/texture/: ImageLoader.cpp  ImageLoader.hpp
engine/core/log/: Log.cpp  Log.hpp
engine/core/math/: MathTypes.hpp
engine/core/types/: CommonTypes.hpp
engine/platform/common/: InputCodes.hpp
engine/platform/interface/: IClock.hpp  IFileSystem.hpp  IThreading.hpp  IWindow.hpp
engine/platform/macos/: MacClock.cpp  MacClock.hpp  MacFileSystem.cpp  MacFileSystem.hpp  MacThreading.cpp  MacThreading.hpp  MacWindowGLFW.cpp  MacWindowGLFW.hpp
engine/render/animation/: Animator.cpp  Animator.hpp
engine/render/lighting/: LightingSystem.cpp  LightingSystem.hpp
engine/render/material/: MaterialSystem.cpp  MaterialSystem.hpp
engine/render/passes/: SkinPbrPass.cpp  SkinPbrPass.hpp
engine/render/scene/: RenderScene.hpp  SceneTypes.hpp
engine/rhi/vulkan/: MoltenVkBridge.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCheck.hpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
shaders/: skin_pbr.frag  skin_pbr.vert  skin_shadow.vert
tests/: CMakeLists.txt
tests/unit/: test_animator.cpp  test_import_hiphop.cpp  test_weights.cpp
tools/capture/: generate_readme_previews.sh
tools/shader_compile/: compile_shaders.cmake
